--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
 	</head>
 	<body class="is-loading">
 
@@ -24,7 +25,7 @@
 						</header>
 
 						<hr />
-						<h2>Extra Stuff!</h2>
+						<!-- <h2>Contact Us</h2>
 						<form method="post" action="#">
 							<div class="field">
 								<input type="text" name="name" id="name" placeholder="Name" />
@@ -57,7 +58,7 @@
 								<li><a href="#" class="button">Get Started</a></li>
 							</ul>
 						</form>
-						<hr />
+						<hr /> -->
 
 						<footer>
 							<ul class="icons">
