Basic landing layout.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico">
+		<noscript><link rel="stylesheet" href="/css/noscript.css" /></noscript>
+		<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.ico">
 	</head>
 	<body class="is-loading">
 
@@ -25,23 +25,13 @@
 						</header>
 
 						<hr />
-						<!-- <h2>Contact Us</h2>
+						<h2>Contact Us</h2>
 						<form method="post" action="#">
 							<div class="field">
 								<input type="text" name="name" id="name" placeholder="Name" />
 							</div>
 							<div class="field">
 								<input type="email" name="email" id="email" placeholder="Email" />
-							</div>
-							<div class="field">
-								<div class="select-wrapper">
-									<select name="department" id="department">
-										<option value="">Department</option>
-										<option value="sales">Sales</option>
-										<option value="tech">Tech Support</option>
-										<option value="null">/dev/null</option>
-									</select>
-								</div>
 							</div>
 							<div class="field">
 								<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
@@ -58,13 +48,38 @@
 								<li><a href="#" class="button">Get Started</a></li>
 							</ul>
 						</form>
-						<hr /> -->
+						<hr />
+
+						<h2>About</h2>
+						<div>
+							<div class="field">
+							 <p class="about">We recover data from obsolete formats</p>
+							 <p class="about">and help you plan for the long-term</p>
+							 <p class="about">preservation of your digital information.</p>
+							</div>
+							<ul class="formats">
+								<li>Audio</li>
+								<li>Documents</li>
+								<li>Email</li>
+								<li>Games</li>
+								<li>Images</li>
+								<li>Software</li>
+								<li>Video</li>
+								<li>And Other Born-Digital Materials</li>
+							</ul>
+							<ul class="actions">
+								<li><a href="#" class="button">Contact Us</a></li>
+							</ul>
+							<div class="field">
+							 <p class="about name"><a href="http://www.bartleby.com/140/">The name</a></p>
+						 </div>
+						</div>
+						<hr />
 
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="#" class="fa-question">About</a></li>
+								<li><a href="#" class="fa-envelope-o">Contact</a></li>
 							</ul>
 						</footer>
 					</section>
