Add alternate landing for react app.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 					<footer id="footer">
 						<ul class="copyright">
 							<li>&copy; Tender Buttons</li>
+							<li>NYC</li>
 							<li>2017</li>
 						</ul>
 					</footer>
