Change reference on landing page to the book.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<li><a href="#" class="button">Contact Us</a></li>
 							</ul>
 							<div class="field">
-							 <p class="about name"><a href="http://www.bartleby.com/140/">The name</a></p>
+							 <p class="about name"><a href="https://en.wikipedia.org/wiki/Tender_Buttons_(book)">The name</a></p>
 						 </div>
 						</div>
 
